# vanifold

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-MIT  README.md
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
bridges/: README.md
core/: Cargo.toml
core/src/: api.rs  config.rs  discovery.rs  interlock.rs  main.rs  model.rs  mqtt.rs  registry.rs  store.rs
docs/: DESIGN.md  entity-model.md  mqtt-conventions.md  ui-taxonomy.md
nodes/: README.md  electronics-bay.yaml  rear-entry.yaml  secrets.yaml.example
scripts/: bootstrap-pi.sh  build.sh  install.sh  shelly-3em-discovery.sh
tools/emulator/: Cargo.toml
tools/emulator/src/: main.rs
ui/: README.md  package-lock.json  package.json  vite.config.ts
ui/src/: app.css
ui/src/lib/: demo.ts  hub.svelte.ts  panels.ts  types.ts
ui/src/lib/components/: ControlTile.svelte  DetailPanel.svelte  EntityCard.svelte  EntityRow.svelte  Gauge.svelte  Icon.svelte  QuarantinePanel.svelte  TankBar.svelte
ui/src/routes/: +layout.svelte  +layout.ts  +page.svelte
ui/src/routes/p/[key]/: +page.svelte
ui/src/routes/system/: +page.svelte
