[package]
name = "vanifold-core"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Vanifold hub daemon: MQTT ingestion, entity registry, API, history"

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
# default-features = false drops rustls/aws-lc (TLS is deferred per docs/mqtt-conventions.md);
# saves cmake + a C toolchain-heavy build on the Pi
rumqttc = { version = "0.25.1", default-features = false }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
